[gd_scene load_steps=47 format=2]

[ext_resource path="res://Sprites/body.png" type="Texture" id=1]
[ext_resource path="res://Sprites/body_tooth35.png" type="Texture" id=2]
[ext_resource path="res://Sprites/body_thyroid60.png" type="Texture" id=3]
[ext_resource path="res://Sprites/body_skin100.png" type="Texture" id=4]
[ext_resource path="res://Sprites/body_skin60.png" type="Texture" id=5]
[ext_resource path="res://Sprites/body_tooth60.png" type="Texture" id=6]
[ext_resource path="res://Sprites/body_thyroid100.png" type="Texture" id=7]
[ext_resource path="res://Sprites/body_skin35.png" type="Texture" id=8]
[ext_resource path="res://Sprites/body_thyroid35.png" type="Texture" id=9]
[ext_resource path="res://Sprites/body_tooth100.png" type="Texture" id=10]
[ext_resource path="res://Sprites/body_intestine100.png" type="Texture" id=11]
[ext_resource path="res://Sprites/fondo.jpg" type="Texture" id=12]
[ext_resource path="res://Sprites/body_heart100.png" type="Texture" id=13]
[ext_resource path="res://Sprites/body_heart60.png" type="Texture" id=14]
[ext_resource path="res://Sprites/body_head60.png" type="Texture" id=15]
[ext_resource path="res://Sprites/body_intestine60.png" type="Texture" id=16]
[ext_resource path="res://Sprites/body_eyes60.png" type="Texture" id=17]
[ext_resource path="res://Sprites/body_heart35.png" type="Texture" id=18]
[ext_resource path="res://Sprites/body_head100.png" type="Texture" id=19]
[ext_resource path="res://Sprites/body_head35.png" type="Texture" id=20]
[ext_resource path="res://Sprites/body_eyes35.png" type="Texture" id=21]
[ext_resource path="res://Sprites/body_eyes100.png" type="Texture" id=22]
[ext_resource path="res://Sprites/body_intestine35.png" type="Texture" id=23]
[ext_resource path="res://body.gd" type="Script" id=24]
[ext_resource path="res://Sound/alarm.ogg" type="AudioStream" id=25]
[ext_resource path="res://Sprites/light.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Lights/tooth.gd" type="Script" id=27]
[ext_resource path="res://Sprites/Lights/eyes.gd" type="Script" id=28]
[ext_resource path="res://Sprites/Lights/heart.gd" type="Script" id=29]
[ext_resource path="res://Sprites/Lights/intestine.gd" type="Script" id=30]
[ext_resource path="res://Sprites/Lights/thyroid.gd" type="Script" id=31]
[ext_resource path="res://Sprites/Lights/head.gd" type="Script" id=32]
[ext_resource path="res://Sprites/Lights/skin.gd" type="Script" id=33]
[ext_resource path="res://Level8S.tscn" type="PackedScene" id=34]
[ext_resource path="res://Level2.tscn" type="PackedScene" id=35]
[ext_resource path="res://Level7S.tscn" type="PackedScene" id=36]
[ext_resource path="res://Level3.tscn" type="PackedScene" id=41]
[ext_resource path="res://Juego/vitamins.png" type="Texture" id=42]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 21 ), ExtResource( 17 ), ExtResource( 22 ) ],
"loop": true,
"name": "body_eyes",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 20 ), ExtResource( 15 ), ExtResource( 19 ) ],
"loop": true,
"name": "body_head",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 10 ) ],
"loop": true,
"name": "body_tooth",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 7 ) ],
"loop": true,
"name": "body_thyroid",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 18 ), ExtResource( 14 ), ExtResource( 13 ) ],
"loop": true,
"name": "body_heart",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 23 ), ExtResource( 16 ), ExtResource( 11 ) ],
"loop": true,
"name": "body_intestine",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "body_skin",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "eyes"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("eyes:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "head"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("head:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.7 ]
}

[sub_resource type="Animation" id=4]
resource_name = "heart"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("heart:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.7 ]
}

[sub_resource type="Animation" id=5]
resource_name = "intestine"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("intestine:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.7 ]
}

[sub_resource type="Animation" id=6]
resource_name = "skin"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("skin:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.7 ]
}

[sub_resource type="Animation" id=7]
resource_name = "thyroid"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("thyroid:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.7 ]
}

[sub_resource type="Animation" id=8]
resource_name = "tooth"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("tooth:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.7 ]
}

[node name="Area2D" type="Area2D"]
position = Vector2( 227.684, 327.922 )
script = ExtResource( 24 )
Scene1 = ExtResource( 41 )
Scene2 = ExtResource( 35 )
Scene3 = ExtResource( 34 )
Scene4 = ExtResource( 36 )

[node name="fondo" type="TextureRect" parent="."]
margin_left = -280.406
margin_top = -351.073
margin_right = 1319.6
margin_bottom = 548.927
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="body" type="AnimatedSprite" parent="."]
position = Vector2( 2.56052, 78.3291 )
scale = Vector2( 1.54258, 1.55936 )
frames = SubResource( 1 )
animation = "body_eyes"
speed_scale = 0.9

[node name="eyes" type="Light2D" parent="body"]
position = Vector2( 5.38298, -199.088 )
scale = Vector2( 0.144957, 0.0542371 )
enabled = false
texture = ExtResource( 26 )
color = Color( 1, 0, 0, 1 )
mode = 2
script = ExtResource( 28 )

[node name="head" type="Light2D" parent="body"]
position = Vector2( 5.45264, -216.522 )
scale = Vector2( 0.132435, 0.100119 )
enabled = false
texture = ExtResource( 26 )
color = Color( 1, 0, 0, 1 )
mode = 2
script = ExtResource( 32 )

[node name="heart" type="Light2D" parent="body"]
position = Vector2( 16.0739, -124.532 )
scale = Vector2( 0.092602, 0.0899525 )
enabled = false
texture = ExtResource( 26 )
color = Color( 1, 0, 0, 1 )
energy = 0.820489
mode = 2
script = ExtResource( 29 )

[node name="intestine" type="Light2D" parent="body"]
position = Vector2( 5.07532, -20.0725 )
scale = Vector2( 0.24347, 0.182546 )
enabled = false
texture = ExtResource( 26 )
color = Color( 1, 0, 0, 1 )
energy = 0.7
mode = 2
script = ExtResource( 30 )

[node name="skin" type="Light2D" parent="body"]
position = Vector2( -14.9791, 77.2627 )
scale = Vector2( 0.0777277, 0.167169 )
enabled = false
texture = ExtResource( 26 )
color = Color( 1, 0, 0, 1 )
energy = 0.7
mode = 2
script = ExtResource( 33 )

[node name="thyroid" type="Light2D" parent="body"]
position = Vector2( 5.95474, -166.919 )
scale = Vector2( 0.120035, 0.0640833 )
enabled = false
texture = ExtResource( 26 )
color = Color( 1, 0, 0, 1 )
energy = 0.7
mode = 2
script = ExtResource( 31 )

[node name="tooth" type="Light2D" parent="body"]
position = Vector2( 5.61185, -176.626 )
scale = Vector2( 0.0743953, 0.0369419 )
enabled = false
texture = ExtResource( 26 )
color = Color( 1, 0, 0, 1 )
energy = 0.7
mode = 2
script = ExtResource( 27 )

[node name="timer_light" type="Timer" parent="body"]
wait_time = 0.1
autostart = true

[node name="light_animation" type="AnimationPlayer" parent="body"]
autoplay = "eyes"
anims/eyes = SubResource( 2 )
anims/head = SubResource( 3 )
anims/heart = SubResource( 4 )
anims/intestine = SubResource( 5 )
anims/skin = SubResource( 6 )
anims/thyroid = SubResource( 7 )
anims/tooth = SubResource( 8 )

[node name="button_zone" type="Button" parent="."]
margin_left = -2.99677
margin_top = -206.43
margin_right = 26.0032
margin_bottom = -186.43
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="alarm" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 25 )
volume_db = -5.0

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="vitaminsPic" type="Sprite" parent="."]
position = Vector2( 231.979, -293.383 )
scale = Vector2( 0.237962, 0.244794 )
texture = ExtResource( 42 )

[node name="vitamins" type="Label" parent="."]
modulate = Color( 0.0313726, 0, 1, 1 )
margin_left = 175.943
margin_top = -331.771
margin_right = 232.943
margin_bottom = -291.771
rect_scale = Vector2( 2, 2 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="iniciar_juego_zona0" from="." to="." method="juego_zona0"]
[connection signal="iniciar_juego_zona1" from="." to="." method="juego_zona1"]
[connection signal="iniciar_juego_zona2" from="." to="." method="juego_zona2"]
[connection signal="iniciar_juego_zona3" from="." to="." method="juego_zona3"]
[connection signal="pressed" from="button_zone" to="." method="_on_Button_pressed"]
